plang/testing/logs/false-incorrect/15/program15.p.p
sAD :- aj5Qw.


vvr Q MYPb0 DY2 TLBx.
v7 pU (J5r) :- ((hhm xPa); jFrx (F9) (sRC2 M00W)); ((waHBb x6 ZtDp, gHo (N354) (cEpI Hvog3 t a87sY) dt (T2))); r3oY, bc fgEJv, tEoNg (yX TI (Wjzh)); (aP).

? ((v5t VLEa lGSFi; bS), (lda2b rZ); (pYlac (D) jaV)), ((th; reG YC XWVq (XAapA))).



